fix: add spacing between text and icon to filter button

--- a/src/css/classes.css
+++ b/src/css/classes.css
@@ -74,6 +74,10 @@
   margin-right: 5px;
 }
 
+.ml-5 {
+  margin-left: 5px;
+}
+
 .mb-20 {
   margin-bottom: 20px;
 }
